tests/e2e/not_allowed/has.error
Error: syntax error in story at line 1, column 1

1|    has = 1
      ^^^

E0030: `has` is reserved for future use
